--- a/app/views/container.html
+++ b/app/views/container.html
@@ -1,7 +1,7 @@
 <div>
 	<h2>Container</h2>
 	<ng-include src="'views/toolbar.html'"></ng-include>
-	<ng-include src="'views/edit-area.html'"></ng-include>
-	<ng-include src="'views/preview-area.html'"></ng-include>
+	<ng-include src="'views/edit-panel.html'"></ng-include>
+	<ng-include src="'views/preview-panel.html'"></ng-include>
 
 </div>
