added controllers for edit and preview panels, and implemented Observer pattern to broadcast a model change to registered controllers

--- a/app/views/container.html
+++ b/app/views/container.html
@@ -1,7 +1,7 @@
 <div>
 	<h2>Container</h2>
 	<ng-include src="'views/toolbar.html'"></ng-include>
-	<ng-include src="'views/edit-panel.html'"></ng-include>
-	<ng-include src="'views/preview-panel.html'"></ng-include>
+	<ng-include src="'views/edit-panel.html'" ng-controller="editPanelCtrl"></ng-include>
+	<ng-include src="'views/preview-panel.html'" ng-controller="previewPanelCtrl"></ng-include>
 
 </div>
