--- a/app/views/toolbar.html
+++ b/app/views/toolbar.html
@@ -1,3 +1,9 @@
 <div>
+	
 	<h3>Toolbar</h3>
+	<ul>
+	<li><a href=""><button ng-click="gras();"><B>G</B></button></a></li>
+	<li><button ng-click="italique();"><I>I</I></button></li>
+	<li><button ng-click="souligné(); "><U>S</U></button></li>
+	</ul>
 </div>
