--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,4 @@
+
 .panel {
 	float: left;
 	margin: 10px;
@@ -7,5 +8,26 @@
 
 .edit-area-textarea {
 	height: 300px;
+
+}
+button{
+	width:30px;
+	height:30px;
+	background:#cc0000;
+	font:bold 13px Arial;
+	border-radius:50%;
+	border:none;
+	color:#fff;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    border: 1px solid #e7e7e7;
+    background-color: #f3f3f3;
+}
+li {
+    float: left;
 
 }
