communication between V and C for toolbar ok

--- a/app/views/toolbar.html
+++ b/app/views/toolbar.html
@@ -2,8 +2,8 @@
 	
 	<h3>Toolbar</h3>
 	<ul>
-	<li><a href=""><button ng-click="gras();"><B>G</B></button></a></li>
-	<li><button ng-click="italique();"><I>I</I></button></li>
-	<li><button ng-click="souligné(); "><U>S</U></button></li>
+	<li><button ng-click="bold();"><B>G</B></button></li>
+	<li><button ng-click="italic();"><I>I</I></button></li>
+	<li><button ng-click="underline();"><U>S</U></button></li>
 	</ul>
 </div>
