--- a/app/views/container.html
+++ b/app/views/container.html
@@ -1,6 +1,6 @@
 <div>
 	<h2>Container</h2>
-	<ng-include src="'views/toolbar.html'"></ng-include>
+	<ng-include src="'views/toolbar.html'" ng-controller="toolBarCtrl"></ng-include>
 
 	<div class="panels-container">
 		<ng-include src="'views/edit-panel.html'" ng-controller="editPanelCtrl"></ng-include>
