--- a/app/views/preview-panel.html
+++ b/app/views/preview-panel.html
@@ -1,5 +1,8 @@
 <div class="preview-panel panel">
 	<h3>Preview panel</h3>
-	<p>Text in edit panel textarea: {{text}}</p>
+
+	<div class="preview-display" ng-bind-html="htmlPreviewText"></div>
+
+	<!--<preview-display pd-text="{{pdText}}" pd-style=""></preview-display>-->
 
 </div>
