--- a/app/views/toolbar.html
+++ b/app/views/toolbar.html
@@ -1,9 +1,11 @@
-<div>
+<div class="tollbar">
 	
 	<h3>Toolbar</h3>
 	<ul>
-	<li><button ng-click="bold();"><B>G</B></button></li>
-	<li><button ng-click="italic();"><I>I</I></button></li>
-	<li><button ng-click="underline();"><U>S</U></button></li>
+	<li><button id="style-button" ng-click="bold();"><B>G</B></button></li>
+	<li><button id="style-button" ng-click="italic();"><I>I</I></button></li>
+	<li><button id="style-button" ng-click="underline();"><U>S</U></button></li>
 	</ul>
+
+	
 </div>
