--- a/app/views/edit-panel.html
+++ b/app/views/edit-panel.html
@@ -1,7 +1,9 @@
 <div class="edit-panel panel">
-	<h3>Edit panel :: {{reduceExtend}}</h3>	
-	<button ng-if="reduceExtend" class="reduce-button"  ng-click="onButtonChange(); reduceStyle={width:'0px', height:'0px'}">reduire</button>
+	<h3>Edit panel :: {{reduceExtend}}</h3>
+	<p>	
+	<button ng-if="reduceExtend" class="reduce-button"  ng-click="onButtonChange()">reduire</button>
 	<button ng-if="!reduceExtend" class="reduce-button"  ng-click="onButtonChange()">agrandir</button>
+	</p>
 
 	<edit-area></edit-area>
 
