--- a/app/views/container.html
+++ b/app/views/container.html
@@ -1,8 +1,11 @@
-<div>
-	<h2>Container</h2>
+<div class="container">
+<div ng-class="{'header-fullscreen': fullscreen, 'header-non-fullscreen': !fullscreen}">
+		<h1 ng-if="!fullscreen">Welcome to ng-edit</h1>
+	</div>
+	
 	<ng-include src="'views/toolbar.html'" ng-controller="toolBarCtrl"></ng-include>
 
-	<div class="panels-container">
+	<div ng-class="{'panels-container': true, 'panels-container-fullscreen': fullscreen, 'panels-container-non-fullscreen': !fullscreen}">
 		<ng-include src="'views/edit-panel.html'" ng-controller="editPanelCtrl"></ng-include>
 		<ng-include src="'views/preview-panel.html'" ng-controller="previewPanelCtrl"></ng-include>
 
