--- a/app/views/edit-panel.html
+++ b/app/views/edit-panel.html
@@ -1,5 +1,5 @@
 <div class="edit-panel panel">
-	<h3>Edit panel</h3>
+	<h3 ng-if="!fullscreen" class="panel-title">Edit panel</h3>
 	<edit-area></edit-area>	
 
 </div>
