--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,7 @@
+body {
+	background-color: #ededed;
+}
+
 .container {
 	height: 100%;
 	/*border: 1px solid blue;*/
@@ -18,11 +22,13 @@
     width: 100%;
     height: 8%
     margin: 1%;
+    box-sizing: border-box;
 }
 
 .panels-container {
 	float: left;
 	width: 100%;
+	
 	/*border: 1px solid red;*/
 }
 
@@ -44,15 +50,22 @@
 }
 
 .edit-area-textarea {
-	width: 100%
+	width: 100%;
+	border: 1px solid #e7e7e7;
+	background-color: #f3f3f3;
+	color: #000000;
+	
+
 }
 
 .preview-display {
 	height: 100%;
 	width: 100%;
-	border: 1px black solid;
+	border: 1px solid #e7e7e7;
+	border-left: none;
 	padding: 5px;
 	box-sizing: border-box;
+	background-color: #f3f3f3;
 }
 
 .edit-area-textarea-non-fullscreen, .preview-display-non-fullscreen {
@@ -61,6 +74,7 @@
 
 .edit-area-textarea-fullscreen, .preview-display-fullscreen {
 	height: 100%;
+	border-top: none;
 }
 
 
