changed border color

--- a/app/views/toolbar.html
+++ b/app/views/toolbar.html
@@ -1,4 +1,4 @@
-<div class="toolbar">
+<div class="toolbar widget">
 	<div class="toolbar-left">
 		<ul>
 			<li><button ng-click="bold();"><B>G</B></button></li>
