--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -15,8 +15,13 @@ body {
 	height: 0%;
 }
 
+
+.widget {
+	border: 1px solid #a6aaba;
+}
+
 .toolbar {
-	border: 1px solid #e7e7e7;
+
     background-color: #f3f3f3;
     float: left;
     width: 100%;
@@ -51,7 +56,7 @@ body {
 
 .edit-area-textarea {
 	width: 100%;
-	border: 1px solid #e7e7e7;
+
 	background-color: #f3f3f3;
 	color: #000000;
 	
@@ -61,7 +66,7 @@ body {
 .preview-display {
 	height: 100%;
 	width: 100%;
-	border: 1px solid #e7e7e7;
+
 	border-left: none;
 	padding: 5px;
 	box-sizing: border-box;
@@ -138,3 +143,5 @@ h3.panel-title {
 	margin-bottom: 2.5%;
 	text-align: center;
 }
+
+
