--- a/app/views/preview-panel.html
+++ b/app/views/preview-panel.html
@@ -1,7 +1,7 @@
 <div class="preview-panel panel">
 	<h3 ng-if="!fullscreen" class="panel-title">Preview panel</h3>
 
-	<div ng-class="{'preview-display': true, 'preview-display-non-fullscreen' : !fullscreen, 'preview-display-fullscreen': fullscreen}" ng-bind-html="htmlPreviewText"></div>
+	<div ng-class="{'preview-display': true, 'widget': true, 'preview-display-non-fullscreen' : !fullscreen, 'preview-display-fullscreen': fullscreen}" ng-bind-html="htmlPreviewText"></div>
 
 
 </div>
