--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -101,8 +101,8 @@ button {
 	color:#fff;
 }
 
-button.fullscreen-button {
-	width: 200px;
+button.fullscreen-button, button.maxmin-button {
+	width: 150px;
 }
 
 
