--- a/app/views/edit-panel.html
+++ b/app/views/edit-panel.html
@@ -1,4 +1,8 @@
-<div class="edit-panel panel">
+<div ng-class="{'edit-panel': true, 
+				'panel': true,
+				'both-panels': bothPanels, 
+				'panel-max': maxEdit,
+				'panel-min': minEdit}">
 	<h3 ng-if="!fullscreen" class="panel-title">Edit panel</h3>
 	<edit-area></edit-area>	
 
