--- a/app/views/container.html
+++ b/app/views/container.html
@@ -1,6 +1,6 @@
 <div class="container">
 <div ng-class="{'header-fullscreen': fullscreen, 'header-non-fullscreen': !fullscreen}">
-		<h1 ng-if="!fullscreen">Welcome to ng-edit</h1>
+		<h1 ng-if="!fullscreen">Welcome to ng-edit !</h1>
 	</div>
 	
 	<ng-include src="'views/toolbar.html'" ng-controller="toolBarCtrl"></ng-include>
