--- a/app/views/edit-panel.html
+++ b/app/views/edit-panel.html
@@ -3,7 +3,7 @@
 				'both-panels': bothPanels, 
 				'panel-max': maxEdit,
 				'panel-min': minEdit}">
-	<h3 ng-if="!fullscreen" class="panel-title">Edit panel</h3>
+	<h3 ng-if="!fullscreen" class="panel-title">Edition</h3>
 	<edit-area></edit-area>	
 
 </div>
