--- a/app/views/preview-panel.html
+++ b/app/views/preview-panel.html
@@ -3,7 +3,7 @@
 				'both-panels': bothPanels, 
 				'panel-min': minPreview, 
 				'panel-max': maxPreview}">
-	<h3 ng-if="!fullscreen" class="panel-title">Preview panel</h3>
+	<h3 ng-if="!fullscreen" class="panel-title">Preview</h3>
 
 	<div ng-class="{'preview-display': true, 
 					'widget': true, 
