--- a/app/views/toolbar.html
+++ b/app/views/toolbar.html
@@ -17,8 +17,8 @@
 
 	<div class="toolbar-right">
 		<button class="maxmin-button" ng-if="maxmin == 0" ng-click="onMaxMinClick()">Both Panels</button>
-		<button class="maxmin-button" ng-if="maxmin == 1" ng-click="onMaxMinClick()">Only Edit</button>
-		<button class="maxmin-button" ng-if="maxmin == 2" ng-click="onMaxMinClick()">Only Preview</button>
+		<button class="maxmin-button" ng-if="maxmin == 1" ng-click="onMaxMinClick()">Max Edition</button>
+		<button class="maxmin-button" ng-if="maxmin == 2" ng-click="onMaxMinClick()">Max Preview</button>
 	</div>
 
 	<div class="clear"></div>
