added a clear button

--- a/app/views/toolbar.html
+++ b/app/views/toolbar.html
@@ -4,6 +4,7 @@
 			<li><button ng-click="bold();"><B>B</B></button></li>
 			<li><button ng-click="italic();"><I>I</I></button></li>
 			<li><button ng-click="underline();"><U>U</U></button></li>
+			<li><button ng-click="clear();"><B>C</B></button></li>
 		</ul>
 
 	</div>
