--- a/app/views/toolbar.html
+++ b/app/views/toolbar.html
@@ -5,6 +5,7 @@
 			<li><button ng-click="italic();"><I>I</I></button></li>
 			<li><button ng-click="underline();"><U>U</U></button></li>
 			<li><button ng-click="clear();"><B>C</B></button></li>
+			<li><button ng-click="saveText();"><B>S</B></button></li>
 		</ul>
 
 	</div>
